# citizen_uav_torch

./: .dockerignore  .gitignore  Distance dataset inspection.Rmd  Feature Analysis with Style Transfer.Rmd  Feature Analysis.Rmd  GeoTiff Confusion Matrix.Rmd  GeoTiff_Inspection.Rmd  Inpsect GeoTiff Predictions.Rmd  Inspect GeoTiff Predictions.Rmd  Inspect Images.Rmd  Inspect Model Performances.Rmd  Maize Validation Set.Rmd  Makefile  Playground.Rmd  README.md  Style Transfer Playground.Rmd  Test MixedDataModule.Rmd  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  tox.ini
CitizenUAV/: data.py  download_data.py  io_utils.py  losses.py  manage.py  math_utils.py  models.py  processes.py  style_transfer.py  transforms.py  utils.py
CitizenUAV/scripts/: augment_classification_data.py  augment_data.py  augment_distance_data.py  confmat.py  create_gim_metadata.py  (+19 more)
MogaNet/: README.md  __init__.py  moganet.py
RevCol/: README.md  __init__.py  modules.py  revcol.py  revcol_function.py
SampleSelector/: main.py  methods.py  selector.py
citizenuav/: data.py  io.py  losses.py  math.py  models.py  processes.py  transforms.py
docker/: Dockerfile
experiment_results/: maize_ternary_distance_filtered.csv  maize_ternary_manual_select_results.csv  maize_ternary_raster_data_only.csv  maize_ternary_raster_finetuned.csv  maize_ternary_raster_supplemented.csv
notebooks/: Distance dataset inspection.Rmd  Inspect Images.Rmd  Inspect Inat Distances.Rmd  Inspect regression model.Rmd
pythonic/: data.py  download_data.py
tests/: test_data.py  test_model_training.py
(+23 files in other folders)
