[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "CitizenUAV"
version = "0.0.1"
authors = [
  { name="Niklas Dettmer", email="ndettmer@uos.de" },
]
description = "Python implementation of https://github.com/salimsoltani28/CNN_CitizenScience_UAV_plantspeciesMapping"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch",
    "torchvision",
    "pandas",
    "tqdm",
    "Pillow",
    "pyinaturalist",
    "pytorch-lightning"
]
